--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ button {
     border-radius: 5px;
     border: none;
     font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 h2 {
@@ -52,9 +55,14 @@ h2 {
     margin: 10px;
 }
 
-.carta-imagem img {
-    width: 100%;
-    height: 100%;
+.carta-imagem {
+    max-height: 250px;
+    max-width: 250px;
+    padding: 15px;
+    border: red;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 5px;
 }
 
 .carta-status {
@@ -70,14 +78,23 @@ h2 {
     color: white;
 }
 
+.resultado {
+    color: white;
+}
+
+/* img {
+    max-height: 250px;
+    padding: 15px;
+    border: red;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 5px;
+} */
+
 footer {
     height: 10vh;
     color: #999;
     text-align: center;
     line-height: 10vh;
     font-size: 12px;
-}
-
-.resultado {
-    color: white;
 }
