--- a/style.css
+++ b/style.css
@@ -19,30 +19,33 @@ body {
     margin: 5px 0;
 }
 
-button {
+button, .button-jogar {
     padding: .8rem 1.5rem;
     margin: 1rem 0;
     border-radius: 5px;
     border: none;
     font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.3s;
 }
 
 h2 {
     color: white;
 }
 
-#carta-jogador {
+#carta-jogador, #carta-maquina {
     width: 360px;
     height: 500px;
     overflow: auto;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin: 0 auto;
     display: flex;
     align-items: flex-end;
+    position: relative;
+    background-size: 350px 300px;
+    background-repeat: no-repeat;
+    background-position-x: 5px;
+    background-position-y: 10px;
+    border-radius: 33px;
 }
 
 #carta-jogador h3 {
@@ -55,41 +58,65 @@ h2 {
     margin: 10px;
 }
 
-.carta-imagem {
-    max-height: 250px;
-    max-width: 250px;
-    padding: 15px;
-    border: red;
-    border-style: solid;
-    border-radius: 10px;
-    border-width: 5px;
+.carta-imagem img {
+    width: 100%;
+    height: 100%;
 }
 
 .carta-status {
     height: 160px;
-    margin: 1.5rem;
+    margin: 2rem;
+    color: white;
+    z-index: 2;
 }
 
 .carta-status input {
     margin: 20px 10px;
 }
 
-.opcoes {
+.resultado-final {
     color: white;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bolder;
+    padding: 1rem;
+    border: 2px solid black;
+    background-color: black;
 }
 
-.resultado {
-    color: white;
+.--spacing {
+    margin-left: 2.5rem;
 }
 
-/* img {
-    max-height: 250px;
-    padding: 15px;
-    border: red;
-    border-style: solid;
-    border-radius: 10px;
-    border-width: 5px;
-} */
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.carta-subtitle {
+    z-index: 2;
+    position: absolute;
+    top: 16px;
+    left: 37px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+#cartas {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.carta-status p {
+    margin-bottom: 2rem;
+}
 
 footer {
     height: 10vh;
